# botum

./: CMakeLists.txt  README.md
assets/shaders/: scene.frag  scene.vert
assets/sprites/: sample.aseprite
include/ecs/: ecs.h
include/editor/: buffer.hpp
include/engine/: gl_renderer.h  gl_renderer.hpp  input.h  interface.h  render_types.h  shader.h  utils.h
include/mathf/: mathf.h  matries.h  quat.h  vectors.h
include/platform/: win32.h
include/utils/: vector.h
src/: main.cpp
src/core/: gl_renderer.cpp  helper.cpp  input.cpp  renderer.cpp  shader.cpp  win32.cpp
